tests/programs/invalid/synchronized.java
public class synchronized {
    public synchronized int m() {
        return 42;
    }
}